# QA_guru_course

./: requirements.txt
Homework_1/: test_dop.py
Homework_10/: .gitignore  README.md  test_hw10_high.py
Homework_10/high/: test_hw10_high.py
Homework_10/high/pages/: registration_page_high.py
Homework_10/objects/pages/: registration_page_high.py
Homework_10/objects/users/: users.py
Homework_10/pages/: registration_page_mid.py
Homework_10/tests/: test_hw10_high.py  test_hw10_mid.py
Homework_10/tests/allure-results/: 53138d48-bb7a-4bac-a24b-adf1989a4f53-attachment.txt  88f295d7-c926-423c-8758-4dc52a608206-container.json  9f42d9ba-6bab-4f7e-807e-e67978ec4782-result.json
Homework_12/notifications/: config.json
Homework_16/tests/: test_fixtures.py  test_parametrize.py  test_skip.py
Homework_18/: README.md  pyproject.toml
Homework_19/: test_api_1.py  utils.py
Homework_2/: README.md  conftest.py  test_second_lesson.py
Homework_20/: README.md  conftest.py  pyproject.toml  pytest.ini
Homework_20/tests/: test_demoshop.py
Homework_4/: test_qa_guru_8_pyhton_hw4.py
Homework_5/: conftest.py  test_hw5.py
Homework_6/: test_qa_guru_8_pyhton_hw6.py
Homework_7/: requirements.txt  test_hw.py  utils.py
Homework_8/: README.md  models.py  test_shop.py
Homework_9/: test_allure_decorators.py  test_allure_steps.py  test_selene.py
