[tool.poetry]
name = "homework-18"
version = "0.1.0"
description = "QA Guru Python 18 lesson homework"
authors = ["Timir Gazizov <abzxcvvcxzba@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
selenium = "^4.16.0"
selene = "2.0.0rc4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
